<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingsActivity"
    android:background="#fff5f5f5"
    android:orientation="vertical">

    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#fff5f5f5">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/back_1"
            android:padding="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="#ff333333"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/ll_item">
        <ImageView
            android:id="@+id/iv_ll1_1"
            android:layout_marginLeft="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/app_lock"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/iv_ll1_1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_lock"
                android:textColor="#ff333333"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/turning_it_off_will_disable_app_lock"
                android:textColor="#ff999999"
                android:textSize="12dp" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch_1"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_changepw"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/ll_item">
        <ImageView
            android:id="@+id/iv_ll2_1"
            android:layout_marginLeft="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/change_password"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/iv_ll2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/change_password"
            android:textColor="#ff333333"
            android:textStyle="bold"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_changeicon"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/ll_item">
        <ImageView
            android:id="@+id/iv_ll3_1"
            android:layout_marginLeft="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/icon_camouflage"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/iv_ll3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/icon_camouflage"
            android:textColor="#ff333333"
            android:textStyle="bold"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/ll_item">
        <ImageView
            android:id="@+id/iv_ll4_1"
            android:layout_marginLeft="10dp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/version"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/iv_ll4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="Version"
            android:textColor="#ff333333"
            android:textStyle="bold"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.0.0"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:textColor="#ff999999"/>
    </RelativeLayout>
</LinearLayout>